rgbds-0.6.1/test/asm/isconst.err
warning: isconst.asm(14) -> isconst.asm::test_expr(10): [-Wuser]
    Test #1: Compile-time constant
error: isconst.asm(15) -> isconst.asm::test_expr(9):
    Expected constant expression: 'UnknownLabel' is not constant at assembly time
warning: isconst.asm(21) -> isconst.asm::test_expr(10): [-Wuser]
    Test #3: Compile-time constant
warning: isconst.asm(22) -> isconst.asm::test_expr(10): [-Wuser]
    Test #4: Compile-time constant
error: isconst.asm(28) -> isconst.asm::test_expr(9):
    Expected constant expression: 'FloatingLabel' is not constant at assembly time
warning: isconst.asm(29) -> isconst.asm::test_expr(10): [-Wuser]
    Test #6: Compile-time constant
error: Assembly aborted (2 errors)!
